advances on cli for explore statistics
